--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="style.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <div class="project">
+    <section>
+    <div id="project">
         <div class="cover">
             <div class="button">
                <div class="text">C</div>
@@ -28,11 +30,12 @@
                <div class="text">.</div>
                <div class="text">(</div>
                <div class="text">)</div>
-               <div class="text">+</div>
-               <div class="text">=</div>
+               <div class="text">0</div>
+               <div id="equal" class="text">=</div>
         </div>
         </div>
     </div>
-    <script src="style.js"></script>
+</section>
+
 </body>
 </html>
